# x-files-game

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
cpp/: CMakeLists.txt  README.md
cpp/include/assets/: cinepak_decoder.h  ima_adpcm.h  pict_decoder.h  qt_container.h
cpp/include/hdb/: hdb_container.h  hdb_context.h  hdb_tlv.h  master_hdb.h  tlv_reader.h
cpp/include/nl/: class_meta.h  cneoidlist.h  hb_subrecords.h  hdb_record_index.h  hdb_serializer.h  leaf_walker.h  neo_stream.h  neo_stream_serializer.h  neoid_resolver.h  system_classes.h  trigger_graph.h  vc_factory.h  vc_object.h
cpp/include/nl/classes/: vc_action.h  vc_action_list.h  vc_atomic_family.h  vc_blob.h  vc_character_family.h  vc_conversation.h  vc_email_family.h  vc_game_state.h  vc_hotspot_family.h  vc_icon_family.h  vc_list_family.h  vc_nav.h  vc_remaining.h  vc_scene_graph.h  vc_ui_family.h
cpp/include/runtime/: dispatcher.h  fmv_player.h  hsp_loader.h  mini_json.h  scene_resolver.h
cpp/include/vc/: _class_sizes.h  _size_assert.h  inline_collection.h  vc_interface_item_reader.h  vc_object.h  vc_title_reader.h  vcaction.h  vcaction_icon.h  vcaction_list.h  vcasset_category.h  vcasset_ref.h  vcasset_ref_list.h  vcblob.h  vcchar_view.h  vcchar_view_list.h  vccharacter.h  vcconversation.h  vcconversation_history.h  vcconversation_list.h  vccursor.h  vcdefault_cursors.h  vcdefault_hot_spots.h  vcemail.h  vcemail_pending.h  vcemail_read.h  vcemotion_icon.h  vcenabled.h  vcevidence_icon.h  vcexplorable.h  vcexplorable_list.h  vcgame_state.h  vchot_spot.h  vchot_spot_list.h  vcidea_icon.h  vcidea_map.h  vcidea_map_list.h  vciface_layout.h  vcinterface_item.h  vcinventory.h  vclocaton.h  (+17 more)
cpp/src/assets/: cinepak_decoder.cpp  ima_adpcm.cpp  pict_decoder.cpp  qt_container.cpp
cpp/src/engine/: xfiles_engine.cpp
cpp/src/hdb/: hdb_container.cpp  hdb_context.cpp  hdb_tlv.cpp  master_hdb.cpp  tlv_reader.cpp
cpp/src/nl/: class_meta.cpp  cneoidlist.cpp  hdb_serializer.cpp  leaf_walker.cpp  system_classes.cpp  vc_factory.cpp  vc_object.cpp
cpp/src/nl/classes/: vc_action.cpp  vc_action_list.cpp  vc_atomic_family.cpp  vc_blob.cpp  vc_character_family.cpp  vc_conversation.cpp  vc_email_family.cpp  vc_game_state.cpp  vc_hotspot_family.cpp  vc_icon_family.cpp  vc_list_family.cpp  vc_nav.cpp  vc_remaining.cpp  vc_scene_graph.cpp  vc_ui_family.cpp
cpp/src/runtime/: fmv_player.cpp  hsp_loader.cpp  scene_resolver.cpp  sdl2_main.cpp
cpp/src/tools/: hdb_dump.cpp
cpp/src/vc/: inline_collection.cpp  vc_interface_item_reader.cpp  vc_title_reader.cpp  vcaction.cpp  vcaction_icon.cpp  vcaction_list.cpp  vcasset_category.cpp  vcasset_ref.cpp  vcasset_ref_list.cpp  vcblob.cpp  vcchar_view.cpp  vcchar_view_list.cpp  vccharacter.cpp  vcconversation.cpp  vcconversation_history.cpp  vcconversation_list.cpp  vccursor.cpp  vcdefault_cursors.cpp  vcdefault_hot_spots.cpp  vcemail.cpp  vcemail_pending.cpp  vcemail_read.cpp  vcemotion_icon.cpp  vcenabled.cpp  vcevidence_icon.cpp  vcexplorable.cpp  vcexplorable_list.cpp  vcgame_state.cpp  vchot_spot.cpp  vchot_spot_list.cpp  vcidea_icon.cpp  vcidea_map.cpp  vcidea_map_list.cpp  vciface_layout.cpp  vcinterface_item.cpp  vcinventory.cpp  vclocaton.cpp  vcname.cpp  vcnav.cpp  vcnav__list.cpp  (+14 more)
cpp/tests/: test_class_sizes.cpp  test_dispatcher_save_load.cpp  test_hdb_serializer.cpp  test_phase_iso1_tlv_reader.cpp  test_phase_iso3_vctitle_read.cpp  test_phase_iso4_vcinterfaceitem_read.cpp  test_play_probe.cpp  test_scene_resolver.cpp  test_smoke.cpp  test_vc_list_family_layout.cpp  test_vc_misc_layouts.cpp  test_vcaction_layout.cpp  test_vccursor_layout.cpp  test_vcexplorable_layout.cpp  test_vcnode_layout.cpp  test_vctrigger_layout.cpp
docs/: CLASSES.md  DECISIONS.md  (+20 more)
python/: README.md  hdb_extract.spec  pyproject.toml
python/src/hdb_extract/: __init__.py  __main__.py  cli.py
python/src/hdb_extract/btree/: __init__.py  follow_pointers.py  handle_resolver.py  leaf.py  leaf_resolver.py  master_index.py  master_resolver.py  record_index.py  walker.py
python/src/hdb_extract/classes/: __init__.py  registry.py  spec.py
python/src/hdb_extract/container/: __init__.py  container.py  header.py  pages.py  trailer.py
python/src/hdb_extract/ext/: __init__.py  decomp_intel.py  scene_assets.py  trigger_system.py
python/src/hdb_extract/extractors/: __init__.py  action_vocabulary.py  btree_catalog.py  btree_pages.py  classes_dump.py  complete_dump.py  conversations.py  decision_tree.py  decoded_records.py  dispatcher.py  gam_extract.py  gam_values.py  game_definition.py  hb_subrecords.py  hot_hotspots.py  hotspots.py  loc_extract.py  merge_locale.py  mov_extract.py  navigation_targets.py  neoidlist_dump.py  page_index.py  pff_extract.py  playthrough_trace.py  production_paths.py  readable_scripts.py  scene_asset_map.py  scene_json.py  scene_neologic.py  scene_readable.py  scene_storyboard.py  scenes_with_hotspots.py  strings_dump.py  triggers_full.py  triggers_real.py  typed_records.py  xt_dump.py
python/src/hdb_extract/format/: __init__.py  fourcc.py  neoidlist.py
python/src/hdb_extract/output/: __init__.py  sqlite_writer.py
python/src/hdb_extract/polymorphe/: __init__.py  dispatcher.py
python/src/hdb_extract/serializer/: __init__.py  cursor.py  neo_stream.py  packed.py  tracking.py  writer.py
python/tests/integration/: test_btree_pages.py  test_complete_dump.py  test_conversations_with_extended_index.py  test_dispatcher_parity.py  test_dispatcher_vs_gam.py  test_full_extract.py  test_game_definition.py  test_hotspots.py  test_master_index_extended.py  test_navigation_targets.py  test_playthrough_trace.py  test_resolver_coverage_extended.py  test_scene_asset_map.py  test_scenes_with_hotspots.py  test_trigger_system.py  test_triggers_full.py  test_xt_dump.py
python/tests/unit/: test_classes_apply_read.py  test_container.py  test_gam_extract.py  test_loc_extract.py  test_merge_locale.py  test_mov_extract.py  test_pff_extract.py  test_serializer_synth.py  test_writer_roundtrip.py
(+52 files in other folders)
