[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hdb-extract"
version = "0.3.0"
description = "The X-Files: The Game — Decompilation Project. Byte-direct decoder for the XFILES.HDB data file of The X-Files: The Game (1997), NeoPersist 3.0."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "mthcore", email = "mthcoredev@gmail.com" },
]
requires-python = ">=3.10"
keywords = [
    "x-files",
    "hyperbole",
    "virtualcinema",
    "neopersist",
    "neoaccess",
    "neologic",
    "hdb",
    "format analysis",
    "game-preservation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
loc = [
    "pefile>=2024.0",   # for `hdb_extract loc` to read XFiles*.dll resources
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pefile>=2024.0",
]

[project.scripts]
hdb-extract = "hdb_extract.cli:main"

[project.urls]
Homepage = "https://github.com/mthcore/x-files-game"
Repository = "https://github.com/mthcore/x-files-game"
Issues = "https://github.com/mthcore/x-files-game/issues"
Documentation = "https://github.com/mthcore/x-files-game/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/hdb_extract"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
